--- a/EcommerceProject/FrontEnd/app/src/app/app.loginpage.html
+++ b/EcommerceProject/FrontEnd/app/src/app/app.loginpage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Log In Page!</title>
+  <title>Login Page!</title>
 </head>
 <body>
    <h2>Enter your login details!</h2>
